<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>alien4cloud</groupId>
    <artifactId>alien4cloud-parent</artifactId>
    <version>3.0.0-SNAPSHOT</version>
  </parent>
  <artifactId>alien4cloud-ssi-network_policy-plugin</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <name>Alien 4 Cloud SSI network policy plugin</name>
  <description>This plugin is used to generate kubernetes network policies</description>

  <repositories>
    <repository>
      <id>pdl-releases</id>
      <url>https://www.portaildulibre.fr/nexus/repository/opensource-releases</url>
    </repository>
  </repositories>

  <scm>
    <connection>scm:git:https://github.com/alien4cloud/alien4cloud-ssi-network_policy-plugin.git</connection>
  </scm>

  <distributionManagement>
    <repository>
      <id>pdl-releases</id>
      <url>https://www.portaildulibre.fr/nexus/repository/opensource-releases</url>
    </repository>
    <snapshotRepository>
      <id>pdl-snapshots</id>
      <url>https://www.portaildulibre.fr/nexus/repository/opensource-snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <!-- Java coverage configuration -->
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
    <sonar.jacoco.itReportPath>${project.basedir}/target/jacoco-it.exec</sonar.jacoco.itReportPath>

    <!-- Utilities -->
    <lombok.version>1.14.4</lombok.version>
    <guava.version>15.0</guava.version>
    <commons.fileupload.version>1.2.2</commons.fileupload.version>
    <commons-io.version>1.3.2</commons-io.version>
    <velocity.version>1.7</velocity.version>
    <validation-api.version>1.1.0.Final</validation-api.version>
    <hibernate-validator.version>5.0.2.Final</hibernate-validator.version>
    <javax.el-api.version>3.0.0</javax.el-api.version>
    <javax.el-impl.version>2.2.6</javax.el-impl.version>
    <servlet-api.version>3.1.0</servlet-api.version>
    <httpclient.version>4.3.2</httpclient.version>
    <commons-cli.version>1.2</commons-cli.version>
    <commons-lang.version>3.5</commons-lang.version>
    <commons-collections.version>4.1</commons-collections.version>
    <commons-compress.version>1.9</commons-compress.version>

    <!-- JSON and YAML Parsing -->
    <jackson.version>2.8.1</jackson.version>
    <!-- Yaml for properties -->
    <snakeyaml.version>1.12</snakeyaml.version>

    <!-- XML Parsing -->
    <jaxb-api.version>2.0</jaxb-api.version>
    <jaxb.version>2.1.9</jaxb.version>

    <!-- Spring (DI / Rest / Security) -->
    <spring-boot.version>1.4.0.RELEASE</spring-boot.version>
    <spring.version>4.3.2.RELEASE</spring.version>
    <spring.security.version>3.2.5.RELEASE</spring.security.version>
    <spring.ldap.version>2.0.1.RELEASE</spring.ldap.version>
    <aspectj.version>1.7.4</aspectj.version>

    <!-- Metrics for webapp -->
    <codahale-metrics.version>3.0.2</codahale-metrics.version>
    <metrics-spring.version>3.0.1</metrics-spring.version>

    <!-- Logging -->
    <log4j.version>2.8.2</log4j.version>
    <slf4j.version>1.7.24</slf4j.version>

    <!-- Documentation -->
    <springfox-swagger2.version>2.3.1</springfox-swagger2.version>

    <!-- Tests -->
    <junit.version>4.12</junit.version>
    <mockito.version>1.9.0</mockito.version>
    <springockito.version>1.0.4</springockito.version>
    <cucumber.version>1.2.2</cucumber.version>
    <assertj-core.version>3.6.2</assertj-core.version>

    <!-- Build tools -->
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.version>2.3.2</maven.compiler.version>
    <maven.assembly.version>2.4</maven.assembly.version>
    <jetty.version>9.3.11.v20160721</jetty.version>
    <jetty-jsp.version>2.2.0.v201112011158</jetty-jsp.version>
    <maven.cargo.version>1.4.15</maven.cargo.version>
  </properties>

  <dependencies>
    <!-- alien4cloud -->
    <dependency>
      <groupId>alien4cloud</groupId>
      <artifactId>alien4cloud-core</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>alien4cloud</groupId>
      <artifactId>alien4cloud-kubernetes-plugin</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>alien4cloud</groupId>
      <artifactId>alien4cloud-k8s-spark-jobs</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>alien4cloud</groupId>
      <artifactId>alien4cloud-portal-plugin</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- others -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4.1</version>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <attach>false</attach>
          <ignoreDirFormatExtensions>true</ignoreDirFormatExtensions>
          <descriptors>
            <descriptor>src/main/assembly/assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>attach-distribution</id>
            <phase>package</phase>
            <goals>
              <goal>attach-artifact</goal>
            </goals>
            <configuration>
              <artifacts>
                <artifact>
                  <file>target/${project.artifactId}-${project.version}.zip</file>
                  <type>zip</type>
                </artifact>
              </artifacts>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>templating-maven-plugin</artifactId>
        <version>1.0-alpha-3</version> <!-- Be sure to use the last version. Check on the website's plugin -->
        <executions>
          <execution>
            <id>filter-src</id>
            <goals>
              <goal>filter-sources</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>
